--- a/css/izgled.css
+++ b/css/izgled.css
@@ -3,7 +3,6 @@
   }
 
   html, body{
-    padding: 2;
     font-family: Arial, Cochin, Georgia, Times, 'Times New Roman', serif;
     /*Georgia, 'Helvetica', Times, serif;*/
     overflow-x: hidden;
@@ -81,7 +80,6 @@
     height: 200px;
     justify-content: left;
     margin-left: 3px;
-    padding: left;
     width: 250px;
     position: relative;
   }
@@ -117,7 +115,7 @@ label{
     color: steelblue;
     font-size: 17px;
     text-align: center; 
-    margin-left: auto 0; 
+    margin-left: auto;
     margin-right: auto; 
     width: 100px;
 }
@@ -152,13 +150,12 @@ table>tbody>tr:hover{
   margin-left: 500px;
   margin-right: 200px;
   justify-content: right;
-  align-items: right;
 }
 
 #sort>a{
   padding: 5px;
   border: solid 1px  cadetblue;
-  background-color: 797979;
+  background-color: #2b542c;
   color: darkorchid;
   margin-left: 5px;
   margin-right:5px;
@@ -179,7 +176,7 @@ table>tbody>tr:hover{
     justify-content: center;
     margin-left: 100px;
     margin-right: 100px;
-    border: 5%;
+    border: 5px;
     position: fixed;
     display: flex;  
     overflow: hidden;
@@ -240,7 +237,6 @@ table>tbody>tr:hover{
       margin-right: -100px;
   }
 
-  
 @media screen and (min-width: 120px){
     #uni-logos-wrapper{
         padding: 10px; 
